--- a/index.html
+++ b/index.html
@@ -8,17 +8,37 @@
     <!-- Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">1
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     
     <!-- Remix Icon-->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
     <!-- Mine -->
-    <link rel="stylesheet" herf="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <title>Zoom Colone</title>
 </head>
 <body>
+
+
+    <header>
+        <div class="container row jc-end al-center boxed gap-10">
+            <div class="col">
+                <button class="btn btn-header row"><i class="ri-grid-fill"></i><p>Speaker View</p></button>
+            </div>
+            <div class="col">
+                <button class="btn btn-header"><i class="ri-split-cells-horizontal"></i></button>
+            </div>
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
