--- a/index.html
+++ b/index.html
@@ -24,20 +24,138 @@
     <header>
         <div class="container row jc-end al-center boxed gap-10">
             <div class="col">
-                <button class="btn btn-header row"><i class="ri-grid-fill"></i><p>Speaker View</p></button>
+                <button class="btn btn-small row al-center"><i class="ri-grid-fill"></i><p>Speaker View</p></button>
             </div>
             <div class="col">
-                <button class="btn btn-header"><i class="ri-split-cells-horizontal"></i></button>
+                <button class="btn btn-small"><i class="ri-split-cells-horizontal"></i></button>
             </div>
         </div>
     </header>
 
     <main>
 
+
+        <div class="container boxed col grid">
+            <div class="row">
+                <div class="col">
+
+                </div>
+
+            </div>
+        </div>
+    
+
     </main>
 
     <footer>
+        <div class="container row boxed al-center jc-between">
 
+            <div class="row gap-10">
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-mic-fill"></i>
+                            <p>Mute</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-vidicon-fill"></i>
+                            <p>Stop Video</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row gap-10">
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-user-add-fill"></i>
+                            <p>Invite</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-group-fill"></i>
+                            <p>Manage Participants</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-bar-chart-fill"></i>
+                            <p>Pooling</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-share-forward-2-fill green"></i>
+                            <p>Share</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-chat-1-fill"></i>
+                            <p>Chat</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-record-circle-fill"></i>
+                            <p>Record</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-layout-grid-fill"></i>
+                            <p>Breakout Rooms</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large col al-center">
+                            <i class="ri-more-fill"></i>
+                            <p>More</p>
+                        </button>
+                        <i class="ri-arrow-drop-up-line d-none"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row gap-10">
+                <div class="col">
+                    <div class="row al-center">
+                        <button class="btn btn-large">
+                            <p class="red">End meeting</p>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     
 </body>
