--- a/index.html
+++ b/index.html
@@ -34,18 +34,404 @@
 
     <main>
 
-
         <div class="container boxed col grid">
-            <div class="row">
-                <div class="col">
+            <div class="row wrap jc-between overflow-scroll">
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
 
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
+                </div>
+
+                <div class="col p-relative">
+                    <img src="https://picsum.photos/300/200" alt="User Avatar">
+                    <div class="row tag">
+                        <i class="ri-mic-off-fill"></i>
+                        <p>Pinco Pallo</p>
+                    </div>
                 </div>
 
             </div>
         </div>
-    
-
     </main>
+
 
     <footer>
         <div class="container row boxed al-center jc-between">
